--- a/dougnlamb.budget.mvc/Views/Home/Index.cshtml
+++ b/dougnlamb.budget.mvc/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         <h2>Accounts</h2>
         <ul>
             @foreach(IAccountViewModel mdl in Model) {
-                <li>@mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
+                <li>@mdl.oid : @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
             }
         </ul>
         <p>
