some selectionmodel refactoring and added more database functionality.

--- a/dougnlamb.budget.mvc/Views/Home/Index.cshtml
+++ b/dougnlamb.budget.mvc/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using dougnlamb.budget.models;
-@model List<IAccountViewModel>
+@model IUserViewModel
 
 @{
     ViewBag.Title = "Home Page";
@@ -15,21 +15,18 @@
     <div class="col-md-4">
         <h2>Accounts</h2>
         <ul>
-            @foreach(IAccountViewModel mdl in Model) {
+            @foreach(IAccountViewModel mdl in Model.Accounts) {
                 <li>@mdl.oid : @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
             }
         </ul>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Budgets</h2>
+        <ul>
+            @foreach(IBudgetViewModel mdl in Model.Budgets) {
+                <li>@mdl.oid : @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
+            }
+        </ul>
     </div>
     <div class="col-md-4">
         <h2>Web Hosting</h2>
