--- a/dougnlamb.budget.mvc/Views/Home/Index.cshtml
+++ b/dougnlamb.budget.mvc/Views/Home/Index.cshtml
@@ -5,32 +5,50 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
 <div class="row">
     <div class="col-md-4">
-        <h2>Accounts</h2>
-        <ul>
-            @foreach(IAccountViewModel mdl in Model.Accounts) {
-                <li>@mdl.oid : @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
-            }
-        </ul>
+        <div class="card">
+            <div class="card form-header red">
+                <h3><i class="fa fa-lock"></i> My Info</h3>
+            </div>
+            <div class="card-block">
+                <dl>
+                    <dt>User Name</dt>
+                    <dd>@Model.UserId</dd>
+                    <dt>Name</dt>
+                    <dd>@Model.DisplayName</dd>
+                    <dt>E-mail</dt>
+                    <dd>@Model.Email</dd>
+                </dl>
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Budgets</h2>
-        <ul>
-            @foreach(IBudgetViewModel mdl in Model.Budgets) {
-                <li>@mdl.oid : @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
-            }
-        </ul>
+        <div class="card">
+            <div class="card form-header blue">
+                <h3><i class="fa fa-lock"></i> Accounts</h3>
+            </div>
+            <div class="card-block">
+                <ul>
+                    @foreach (IAccountViewModel mdl in Model.Accounts) {
+                        <li>@mdl.oid : @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
+                    }
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <div class="card">
+            <div class="card form-header green">
+                <h3><i class="fa fa-lock"></i> Budgets</h3>
+            </div>
+            <div class="card-block">
+                <ul>
+                    @foreach (IBudgetViewModel mdl in Model.Budgets) {
+                        <li>@mdl.oid : @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
+                    }
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
