--- a/dougnlamb.budget.mvc/Views/Home/Index.cshtml
+++ b/dougnlamb.budget.mvc/Views/Home/Index.cshtml
@@ -32,8 +32,8 @@
                 <ul>
                     @foreach (IAccountViewModel mdl in Model.Accounts) {
                         <li>@Html.ActionLink("Add", "Create", "Transaction", new { accountId = mdl.oid }, null) : 
-                            @Html.ActionLink(mdl.oid.ToString(), "View", "Account", new { accountId = mdl.oid }, null) : 
-                            @mdl.Name : @mdl.DefaultCurrency.Description : @mdl.Owner.DisplayName</li>
+                            @Html.ActionLink(mdl.Name, "View", "Account", new { accountId = mdl.oid }, null) : 
+                            @Html.DisplayFor(m => mdl.Balance)</li>
                     }
                 </ul>
 
