--- a/dougnlamb.budget.mvc/Views/Home/Index.cshtml
+++ b/dougnlamb.budget.mvc/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row">
+<div class="row top-margin-md">
     <div class="col-md-4">
         <div class="card">
             <div class="card form-header red">
