--- a/dougnlamb.budget.mvc/Views/Transaction/Create.cshtml
+++ b/dougnlamb.budget.mvc/Views/Transaction/Create.cshtml
@@ -4,39 +4,32 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<div class="row top-margin-md">
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
 
+        @Html.HiddenFor(model => model.AccountSelector.SelectedAccountId)
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    @Html.HiddenFor(model => model.AccountSelector.SelectedAccountId)
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card form-header green">
+                    <h3><i class="fa fa-lock"></i> Add Transaction</h3>
+                </div>
+                <div class="card-block">
 
-    <div class="form-horizontal">
-        <h4>TransactionEditorModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                    @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
+
+                    @Html.EditorFor(model => model.TransactionAmountEditor)
+
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
             </div>
         </div>
-
-        @Html.EditorFor(model => model.TransactionAmountEditor)
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
 
 @section Scripts {
