--- a/dougnlamb.budget.mvc/Views/User/Index.cshtml
+++ b/dougnlamb.budget.mvc/Views/User/Index.cshtml
@@ -4,60 +4,38 @@
     ViewBag.Title = "Index";
 }
 
-@using (Html.BeginForm("Save", "User")) {
-    @Html.AntiForgeryToken()
+<div class="row top-margin-md">
+    @using (Html.BeginForm("Save", "User")) {
+        @Html.AntiForgeryToken()
 
-    @Html.HiddenFor(m => m.oid)
-    @Html.HiddenFor(m => m.UserId)
+        @Html.HiddenFor(m => m.oid)
+        @Html.HiddenFor(m => m.UserId)
 
-    <div class="card">
-        <!--Header-->
-        <div class="card form-header blue">
-            <h3 id="title"><i class="fa fa-pencil"></i> My Info</h3>
-        </div>
-
-        <!--Body-->
-
-        <br>
-
-        <!--Body-->
-        <div class="card-block">
-            <div class="row">
-                <div class="col-md-12">
-
-                    <br>
-
-                    <div class="md-form">
-                        <i class="fa fa-user prefix"></i>
-                        @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-control" })
-                        <label for="DisplayName" class="">Your name</label>
-                    </div>
-
-                    <div class="md-form">
-                        <i class="fa fa-envelope prefix"></i>
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        <label for="Email">Your email</label>
-                    </div>
-
-                    <div class="md-form">
-                        <i class="fa fa-money prefix"></i>
-                        @Html.EditorFor(m => m.DefaultCurrencySelector, new { @class = "form-control" })
-                        <label for="DefaultCurrencySelector">Currency</label>
-                    </div>
-
+        <div class="col-md-6">
+            <div class="card">
+                <!--Header-->
+                <div class="card form-header blue">
+                    <h3 id="title"><i class="fa fa-pencil"></i> My Info</h3>
                 </div>
+                <div class="card-block">
 
-            </div>
-            <div class="text-xs-center">
-                <button id="submitButtonId" class="btn btn-ptc waves-effect waves-light">Save</button>
-            </div>
+                    <i class="fa fa-user prefix"></i>
+                    <label for="DisplayName" class="">Your name</label>
+                    @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-control" })
 
+                    <i class="fa fa-envelope prefix"></i>
+                    <label for="Email">Your email</label>
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+
+                    <i class="fa fa-money prefix"></i>
+                    <label for="DefaultCurrencySelector">Currency</label>
+                    @Html.EditorFor(model => model.DefaultCurrencySelector, new { htmlAttributes = new { @class = "form-control" } })
+
+                    <button id="submitButtonId" class="btn btn-default">Save</button>
+                </div>
+            </div>
         </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
 
 @section Scripts {
